<resources>
    <!-- TODO: GOOGLE Admob barner id -->
    <!-- TODO: GOOGLE Admob barner id
    ca-app-pub-3940256099942544~3347511713
    ca-app-pub-3940256099942544/6300978111
    -->
    <string name="google_admob_app_id">ca-app-pub-3700703708149769~9980982362</string>
    <string name="google_admob_barner_id">ca-app-pub-3700703708149769/5219733981</string>

    <string name="app_name">AVC</string>
    <string name="title_menu_discover">Discover</string>
    <string name="title_menu_categories">Categories</string>
    <string name="title_menu_pornstars">Pornstars</string>
    <string name="title_menu_me">Me</string>

    <string name="title_menu_teleplay">电视剧</string>
    <string name="title_dashboard">分类</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main">AVC</string>
    <string name="title_activity_categories">分类</string>
    <string name="title_activity_detail">我们</string>
    <string name="title_search_hint">请输入您要搜索的电影</string>

    <string name="toolbar_item_share">Share</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Home blank fragment</string>
    <!-- TODO: 用于App升级使用-->
    <string name="your_title">Your Title</string>
    <string name="your_message">Your Message</string>
    <string name="agree">Your agree</string>
    <string name="disagree">Your disagree</string>

    <string name="openvideo1">Open Video1</string>
    <string name="ads">广告</string>
    <string name="title_activity_vitamio">VitamioActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="click_to_skip">点击跳过</string>
    <string name="gdtslogan">GDTslogan</string>
    <string name="btn_show_native_spot_ad">展示原生插屏广告</string>
    <string name="film_story">  中的一切。</string>

    <string name="film_director">导演：朱塞佩·托纳多雷</string>
    <string name="film_name">天堂电影院</string>
    <string name="title_home">Home</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_username">用户名</string>
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_passworded">确认密码</string>
    <string name="prompt_phone">手机</string>
    <string name="action_sign_up">Create Account and Continue</string>
    <string name="action_sign_up_short">Create An Account</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_auth">登陆</string>
    <string name="action_sign_in_register">注册</string>
    <string name="action_sign_in_short">Sign in 登陆</string>
    <string name="error_invalid_username">This username is too short 用户名太短</string>
    <string name="error_invalid_username_empty">This username is empty 用户名为空</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_email_empty">This email address is empty</string>
    <string name="error_invalid_password">This password is too short 密码太短</string>
    <string name="error_invalid_password_empty">This password is empty 密码为空</string>
    <string name="error_invalid_password_confirm">The password must match the one above 密码不一样</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_invalid_phone">This phone is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>






    <string name="title_activity_sign_in">Sign in</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="title_activity_main_search">PornHub.com</string>

    <string name="file_token">auth.token</string>
    <string name="file_user">username.cache</string>
    <string name="file_password">auth.token</string>


</resources>